# instance_generator

./: .gitignore  CMakeLists.txt  README.md  histogram.cpp  histogram.h  histogram.ui  instance_generator.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: exceptions.cpp  exceptions.h  histogram.cpp  histogram.h  histogram.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/: histogram.ui  mainwindow.ui
